# SolanaOS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAEMON.md  Dockerfile  Dockerfile.fly  FORK.md  Makefile  PAPER.md  README.md  SECURITY.md  SKILL.md  SOLANA_DEV_GUIDE.md  SOUL.md  STRATEGY.md  TOKEN.md  TRADE.md  fly.toml  go.mod  go.sum  hardware.go  install.sh  main.go  memory_commands.go  package-lock.json  package.json  pump.md  railway.json  satoshi.md  start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Claw3D-main/: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_DOCUMENTATION.md  CONTRIBUTING.md  CREATING_SKILLS.md  README.md  ROADMAP.md  SECURITY.md  TUTORIAL.md  VISION.md  netlify.toml  next.config.ts  package-lock.json  package.json  playwright.config.ts  skills-overview.md
chrome-extension/: background.js  popup.html  popup.js
deploy/: README.md  deploy.sh  package.sh
docs/: HARDWARE.md  LANDING.md  RELEASE-2026-03-v2.md  TROUBLESHOOTING.md  adding-a-messaging-platform.md  bitaxe-setup.md  command-cheatsheet.md  control-api.md  ecosystem.md  fly-deployment.md  honcho-integration.md  index.html  notebooklm-pack.md
g0dm0d3-main/: API.md  CONTRIBUTING.md  ChatInput.tsx  Dockerfile  Dockerfile.web  PAPER.md  README.md  SECURITY.md  SettingsModal.tsx  TERMS.md  _headers  _redirects  dataset.ts  docker-compose.yml  index.html  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.ts
mcp-server/: Dockerfile  package.json
nanohub/: .env.deploy.example  .env.local.example  .gitignore  README.md  netlify.toml  package.json  vite.config.ts
page-agent-main/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
scripts/: agent-registry.mjs  bitaxe-quickstart.sh  build-seeker-apk.sh  fly-start.sh  notebooklm-pack.sh  open-seeker-pairing.sh  package-lock.json  package.json  pump-bonding.mjs  pump-launch.mjs  pump_scanner.py  push_pump_to_convex.py  register-scanner-agent.mjs  write-connect-bundle.sh
solana-keychain-main/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  justfile
solana-keychain-main/rust/: CHANGELOG.md  Cargo.toml  README.md
solana-keychain-main/rust/src/: error.rs  http_client_config.rs  lib.rs  signature_util.rs  test_util.rs  traits.rs  transaction_util.rs
solana-keychain-main/rust/src/aws_kms/: mod.rs
solana-keychain-main/rust/src/cdp/: jwt.rs  mod.rs  types.rs
solana-keychain-main/rust/src/crossmint/: mod.rs  types.rs
solana-keychain-main/rust/src/dfns/: auth.rs  mod.rs  types.rs
solana-keychain-main/rust/src/fireblocks/: jwt.rs  mod.rs  types.rs
solana-keychain-main/rust/src/gcp_kms/: mod.rs
solana-keychain-main/rust/src/memory/: keypair_util.rs  mod.rs
solana-keychain-main/rust/src/para/: mod.rs  types.rs
solana-keychain-main/rust/src/privy/: mod.rs  types.rs
solana-keychain-main/rust/src/sdk_adapter/: mod.rs  v2.rs  v3.rs
solana-keychain-main/rust/src/tests/: litesvm_util.rs  mod.rs  rpc_util.rs  test_aws_kms_integration.rs  test_cdp_integration.rs  test_crossmint_integration.rs  test_dfns_integration.rs  test_fireblocks_integration.rs  test_gcp_kms_integration.rs  test_para_integration.rs  test_privy_integration.rs  test_turnkey_integration.rs  test_vault_integration.rs  vault-test-key.b64
solana-keychain-main/rust/src/turnkey/: mod.rs  types.rs
solana-keychain-main/rust/src/vault/: mod.rs
solana-os-web/: .env.example  .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
solanachessclub/: .env.example  .eslintrc.js  .gitignore  AI_FEATURES_IMPLEMENTATION.md  App.tsx  CHESS_INTEGRATION.md  CONTRIBUTING.md  DEBUG_SETUP_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  START_HERE.md  SUPABASE_NEXT_STEPS.md  URGENT_FIXES.md  USER_GUIDE.md  VISUAL_GUIDE.md  app.example.json  babel.config.js  index.js  metro.config.js  mint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native.config.js  tsconfig.json  typedoc.json
ui/: README.md  index.html  package-lock.json  package.json  (+1 more)
(+3989 files in other folders)
