[package]
name = "solana-keychain"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Framework-agnostic Solana signing abstractions"
repository = "https://github.com/solana-foundation/solana-keychain"
keywords = ["solana", "blockchain", "signer", "wallet", "crypto"]

[features]
default = ["memory", "sdk-v2"]

# Signer backends
memory = []
vault = ["dep:reqwest"]
privy = ["dep:reqwest"]
turnkey = ["dep:reqwest", "dep:p256", "dep:hex", "dep:chrono"]
aws_kms = ["dep:aws-sdk-kms", "dep:aws-config", "dep:reqwest"]
fireblocks = [
    "dep:reqwest",
    "dep:jsonwebtoken",
    "dep:sha2",
    "dep:uuid",
    "dep:hex",
    "dep:chrono",
]
para = ["dep:reqwest", "dep:hex"]
crossmint = ["dep:reqwest", "dep:hkdf", "dep:sha2", "dep:ed25519-dalek"]
gcp_kms = ["dep:google-cloud-kms-v1", "dep:google-cloud-auth", "dep:reqwest"]
cdp = [
    "dep:reqwest",
    "dep:jsonwebtoken",
    "dep:uuid",
    "dep:chrono",
    "dep:sha2",
    "dep:hex",
]
dfns = ["dep:reqwest", "dep:hex", "dep:ed25519-dalek", "dep:p256", "dep:sha2", "dep:rsa"]
all = [
    "memory",
    "vault",
    "privy",
    "turnkey",
    "aws_kms",
    "fireblocks",
    "gcp_kms",
    "cdp",
    "para",
    "crossmint",
    "dfns",
]

# SDK version selection (mutually exclusive)
sdk-v2 = ["dep:solana-sdk"]
sdk-v3 = ["dep:solana-sdk-v3", "dep:solana-shred-version-v3", "dep:solana-signature"]

# WARNING: DO NOT ENABLE IN PRODUCTION
# This feature logs full API error responses which may contain sensitive information
# Only use for local development/debugging
unsafe-debug = []

# Integration tests (makes actual API calls, requires credentials)
integration-tests = []

[dependencies]
# Solana SDK (version selected by feature flags)
solana-sdk = { version = "2.3.0", optional = true }
solana-sdk-v3 = { package = "solana-sdk", version = "=3.0.0", optional = true }
# Pinned to =3.0.0 to avoid broken transitive deps (solana-signature v3.3 / solana-hash v3 vs v4)
solana-shred-version-v3 = { package = "solana-shred-version", version = "=3.0.0", optional = true }
# Pin solana-signature to avoid v3.3.0 where DecodeError doesn't implement std::error::Error
solana-signature = { version = ">=3.1, <3.3", optional = true }

# Core dependencies
async-trait = "0.1.89"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
bs58 = "0.5.1"

# Optional dependencies (feature-gated)
reqwest = { version = "0.12.23", optional = true, features = ["json", "rustls-tls"], default-features = false }
p256 = { version = "0.13.2", optional = true }
hex = { version = "0.4.3", optional = true }
chrono = { version = "0.4.42", optional = true }
aws-sdk-kms = { version = "1.97.0", optional = true }
aws-config = { version = "1.1.7", optional = true }
jsonwebtoken = { version = "10.2", optional = true, features = ["rust_crypto"] }
sha2 = { version = "0.10.9", optional = true, features = ["oid"] }
uuid = { version = "1.19", optional = true, features = ["v4"] }
google-cloud-kms-v1 = { version = "1.3.0", optional = true }
google-cloud-auth = { version = "1.4.0", optional = true }
ed25519-dalek = { version = "2", optional = true, features = ["pem"] }
hkdf = { version = "0.12", optional = true }
rsa = { version = "0.9", optional = true }

# Core dependencies (used by all signers for transaction serialization)
bincode = "1.3"
base64 = "0.22.1"
zeroize = "1.8.2"

[dev-dependencies]
tokio = { version = "1.47", features = ["test-util", "macros", "rt"] }
wiremock = "0.6"
rand = "0.8.0"
dotenvy = "0.15.7"
litesvm = "0.7.0"
litesvm-v3 = { package = "litesvm", version = "=0.8.1" }
# Pins the agave-* / solana-*-program cluster to 3.0.11 (last known-good).
# v3.0.14 is partially migrated to solana-hash v4 which causes type mismatches.
# All packages in this cluster have exact cross-version pins, so a single
# agave-feature-set pin cascades the entire cluster.
agave-feature-set-pin = { package = "agave-feature-set", version = "=3.0.11" }
serial_test = "3.3.1"
scoped-env = "2.1"
